fix alignment to 25%

--- a/frontend/src/components/SignUp/SignUp.css
+++ b/frontend/src/components/SignUp/SignUp.css
@@ -35,7 +35,7 @@
 /* RHS */
 .rhs{
     position: relative;
-    top: 10%;
+    top: 25%;
 }
 .content{
     position: relative;
